add unit test for albums profile list and userlist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     }
   ],
   "compilerOptions": {
+    "types": [
+      "@vitest/browser/providers/playwright"
+    ],
     "baseUrl": ".",
     "paths": {
       "@/*": [
