--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,8 +19,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "types": [
+      "@vitest/browser/providers/playwright"
+    ],
   },
   "include": [
-    "vite.config.ts"
+    "vite.config.ts",
+    "vitest.config.ts"
   ]
 }
